# LiteStarGateway

./: .dockerignore  .env.sample  .gitignore  .graphifyignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  EXAMPLES.md  ISSUES.md  README.md  SECURITY.md  docker-compose.benchmark.yml  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  justfile  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/: account-recovery.md  admin-console.md  agent-frameworks.md  api-reference.md  bedrock.md  ci.md  db-migrations.md  deployment.md  enterprise-sso.md  logging.md  native-anthropic.md  native-gemini.md  observability.md  openai-compatible.md  operations.md  param-allowlist.md  postgres.md  provider-resilience.md  routing-embeddings.md  routing-webhook.md  secrets-rotation.md  security-hardening.md  smart-routing.md  usage-cost.md  web-ui.md  weighted-routing.md
docs/next-steps/: agent-framework-compatibility.md  billing-integrity.md  budget-alerts.md  cross-provider-failover.md  extended-endpoints.md  guardrails.md  native-provider-endpoints.md  response-caching.md  responses-level-b.md  routing-evolution.md  smart-routing.md  usage-analytics.md
docs/stylesheets/: extra.css
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/2026-07-06/: .graphify_labels.json  manifest.json
graphify-out/2026-07-07/: .graphify_labels.json  graph.json  manifest.json
graphify-out/2026-07-08/: .graphify_labels.json  manifest.json
graphify-out/2026-07-09/: .graphify_labels.json  manifest.json
graphify-out/cache/: stat-index.json
issues/: INDEX.md  round-1.md  round-10.md  round-11.md  round-12.md  round-2.md  round-3.md  round-4.md  round-5.md  round-6.md  round-7.md  round-8.md  round-9.md
migrations/versions/: 2026-07-01_add_invite_expires_at_d2b3c4e5f6a7.py  2026-07-01_add_password_reset_table_3bde5e9b6c0a.py  2026-07-01_add_secret_key_keyring_credential_key_id_f7df7d9dca05.py  2026-07-01_add_usage_event_table_b84683c8f499.py  2026-07-01_add_user_sso_subject_c1a2b3d4e5f6.py  2026-07-01_baseline_schema_b5fb4086b1e7.py  2026-07-02_add_audit_event_table_f4d5e6a7b8c9.py  2026-07-02_add_pending_usage_event_a5b6c7d8e9fa.py  2026-07-02_add_user_is_active_e3c4d5f6a7b8.py  2026-07-03_add_api_key_scope_d9e0f1a2b3c4.py  2026-07-03_add_login_lockout_columns_c8d9e0f1a2b3.py  2026-07-03_add_pending_usage_event_attempts_f1a2b3c4d5e6.py  2026-07-03_add_service_principals_e0f1a2b3c4d5.py  2026-07-03_add_team_budget_table_b7c8d9e0f1a2.py  2026-07-03_add_user_lockout_cycles_a2b3c4d5e6f7.py  2026-07-06_add_model_params_enforced_and_max_output_tokens_b3c4d5e6f7a8.py  2026-07-07_add_routing_decision_text_b0c1d2e3f4a5.py  2026-07-07_add_routing_decision_usage_f8a9b0c1d2e3.py  2026-07-07_add_scim_provisioning_c5d6e7f8a9b0.py  2026-07-07_add_smart_routing_tables_e7f8a9b0c1d2.py  2026-07-07_add_user_is_auditor_d6e7f8a9b0c1.py  2026-07-08_add_api_key_created_by_index_and__d6ad60a2ebb2.py  2026-07-08_add_user_deactivated_by_a7b8c9d0e1f2.py  2026-07-09_reconcile_params_enforced_not_null_and__5c7937cc1c01.py  2026-07-10_add_organization_description_and_tags_07be156098dd.py  2026-07-10_add_team_description_and_tags_e52bb9a1cdf8.py  (+13 more)
plans/: 01-native-provider-endpoints.md  01a-anthropic-messages-phase1.md  02-agent-frameworks.md  03-admin-ui.md  04-response-caching.md  05-cross-provider-failover.md  06-guardrails.md  07-budget-alerts.md  08-extended-endpoints.md  09-responses-level-b.md  10-usage-analytics.md  11-platform-quality-gates.md  12-routing-evolution.md  13-billing-integrity.md  14-hot-path-throughput.md  README.md
scripts/: benchmark-compose.sh  dev-compose.sh  load-compose.sh  load_artifacts.py  load_mock_server.py  load_test_settings.py  locustfile.py  preflight_global_resource_downgrade.py  run_benchmark_contract.py  run_load_profile.py
tests/: _invite_helpers.py  conftest.py  test_api_keys.py  test_audit.py  test_auth_realm.py  test_budget_enforcement.py  test_budgets.py  test_completion_service_traces.py  test_completions.py  test_config.py  test_credentials.py  test_database_config.py  test_docs.py  test_health.py  test_key_principal.py  test_logging.py  test_login_lockout.py  test_model_params.py  test_models.py  test_observability.py  test_oidc_adapter.py  test_rate_limit.py  test_rbac.py  test_request_policy.py  test_rotation.py  test_routing_integration.py  test_routing_phase2.py  test_routing_phase3.py  test_routing_phase5.py  test_scim.py  test_service.py  test_service_principals.py  test_session.py  test_sso.py  test_stream_usage_fallback.py  test_team_service.py  test_teams.py  test_upstream_errors.py  test_usage_outbox.py  test_user_service.py  (+1 more)
ui/: .env.example  DESIGN.md  eslint.config.js  index.html  openapi.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
(+556 files in other folders)
