[project]
name = "litestar-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Carlo Piccinin", email = "c.piccinin@teamsystem.com" }
]
requires-python = ">=3.14"
dependencies = [
    "advanced-alchemy>=1.11.0",
    "aiosqlite>=0.22.1",
    "anthropic>=0.115.0",
    "cryptography>=49.0.0",
    "litestar[standard]>=2.24.0",
    "openai>=2.44.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    # Third-party: advanced-alchemy still calls its own deprecated helper internally.
    "ignore:Call to deprecated function 'set_async_context':DeprecationWarning",
]

[tool.pyrefly]
project-includes = ["src", "tests"]
search-path = ["src"]
python-version = "3.14"
