[project]
name = "litestar-gateway"
version = "1.4.0"
description = "An OpenAI-compatible LLM gateway (Litestar, hexagonal architecture)."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Carlo Piccinin", email = "c.piccinin@teamsystem.com" }
]
requires-python = ">=3.14"
dependencies = [
    "advanced-alchemy>=1.11.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "anthropic>=0.116.0",
    "asyncpg>=0.31.0",
    "authlib>=1.7.2",
    "boto3>=1.43.44",
    "cryptography>=49.0.0",
    "google-genai>=2.10.0,<3",
    "litestar[standard]>=2.24.0",
    "mlflow-skinny>=3.14.0",
    "openai>=2.44.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "redis>=5.0",
    "rumdl>=0.2.28",
    "structlog>=26.1.0",
    "types-authlib>=1.7.1.20260722",
]

[project.scripts]
litegateway = "litestar_gateway.cli:main"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.156.4",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]
load = [
    "locust==2.44.4",
]

[tool.ruff]
line-length = 100
# Alembic migration scripts are generated; don't lint/format them.
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    # Third-party: advanced-alchemy still calls its own deprecated helper internally.
    "ignore:Call to deprecated function 'set_async_context':DeprecationWarning",
]

[tool.pyrefly]
project-includes = ["src", "tests"]
search-path = ["src", "tests"]
python-version = "3.14"

[tool.rumdl]
# MD013 (line length) off: prose/audit notes wrap naturally and long links/tables
# shouldn't be force-broken. MD036 (emphasis-as-heading) off: the skill/example
# docs use bold labels (**Step B0 …**, **❌ …**) as intentional inline emphasis,
# not section headings.
disable = ["MD013", "MD036"]
